--- a/config.yaml
+++ b/config.yaml
@@ -128,6 +128,7 @@ overlay:
 # Owner sync services
 owner:
   mode: embedded
+  log_level: debug  # Per-module log level (debug, info, warn, error)
   routes:
     enabled: true
 
@@ -148,4 +149,4 @@ jbsync:
       batch_size: 1000
       reorg_depth: 6
       enable_mempool: true
-      autostart: true
+      autostart: false
